[project]
name = "spend_analysis"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "MeGustas", email = "32269100@qq.com"},
]
dependencies = ["django==5.2"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
